--- a/scripts/ESBL_plasmids/mobsuite_AMR_gene_data_curation.Rmd
+++ b/scripts/ESBL_plasmids/mobsuite_AMR_gene_data_curation.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "mobsuite_AMR_gene_data_curation"
+title: "Generate AMRFinder + MOB-Suite linked data on gene presence"
 author: "Kyle Gontjes"
 date: "`r Sys.Date()`"
 output: html_document
@@ -30,10 +30,11 @@ sessionInfo()
 # Load data
 
 ```{r}  
-df <-  readRDS("./data/dataset/MERLIN_cohort_metadata_final.RDS")   %>% subset(WGS_escre == TRUE & qc_pass == TRUE) 
+# Dataframe
+df <-  readRDS("./data/dataset/MERLIN_cohort_metadata_final.RDS")  %>% subset(WGS_escre == TRUE & qc_pass == TRUE) 
 isolates <- df$genomic_id
 
-# AMRFINDER
+# AMRFinder
 amrfinder <- readRDS("./data/amrfinder/amrfinder_cleaned.RDS")  %>% subset(genomic_id %in% isolates)
 amrfinder_mat <- readRDS("./data/amrfinder/amrfinder_matrix.RDS") %>% subset(rownames(.) %in% isolates)
 ESCrE_genotype_info <- readRDS("./data/amrfinder/beta_lactamase_summary_MERLIN_cohort.RDS")
@@ -61,6 +62,7 @@ gene_pres <- lapply(genes,FUN=annotate_contigs,amrfinder_df = amrfinder,mobsuite
 mobsuite_contigs <- left_join(mobsuite_contigs,gene_pres)
 ```
 
+# Binary variable indicating chromosmoe or plasmid as chromosome or plasmid
 ```{r}
 mobsuite_contigs$chromosome <- ifelse(mobsuite_contigs$molecule_type == "chromosome", T, F)
 mobsuite_contigs$plasmid <- ifelse(mobsuite_contigs$molecule_type == "plasmid", T, F) 
@@ -69,16 +71,16 @@ mobsuite_contigs$plasmid <- ifelse(mobsuite_contigs$molecule_type == "plasmid", 
 # Contig data
 ```{r}
 count_chromosome <- function(isolate,genes,isolate_contigs){
-  chromosome <- subset(isolate_contigs,molecule_type =="chromosome")
+  chromosome <- subset(isolate_contigs, molecule_type == "chromosome")
   chromosome_sum <- chromosome %>% select(genes) %>% summarise_all(sum)
-  chromosome_sum_row <- cbind(genomic_id = isolate,type="chromosome",chromosome_sum)
+  chromosome_sum_row <- cbind(genomic_id = isolate, type = "chromosome", chromosome_sum)
   return(chromosome_sum_row)
 }
 
 count_plasmid <- function(cluster,isolate,genes,isolate_contigs){
-  plasmid <- subset(isolate_contigs,primary_cluster_id ==cluster)
-  plasmid_sum <- plasmid %>% select(genes) %>%summarise_all(sum)
-  plasmid_sum_row <- cbind(genomic_id = isolate,type = cluster,plasmid_sum)
+  plasmid <- subset(isolate_contigs, primary_cluster_id == cluster)
+  plasmid_sum <- plasmid %>% select(genes) %>% summarise_all(sum)
+  plasmid_sum_row <- cbind(genomic_id = isolate, type = cluster, plasmid_sum)
   return(plasmid_sum_row)
 }
 
@@ -108,10 +110,11 @@ mobsuite_gene_pres$AMR_contig <- ifelse(mobsuite_gene_pres %>% select(any_of(AMR
 mobsuite_gene_pres$BETA_LACTAM_contig <- ifelse(mobsuite_gene_pres %>% select(any_of(BLA_genes)) %>% rowSums()>0,T,F) 
 mobsuite_gene_pres$ESCrE_contig <- ifelse(mobsuite_gene_pres %>% select(any_of(ESCrE_genes)) %>% rowSums()>0,T,F) 
 
+# Save the mobsuite gene presence data
 saveRDS(mobsuite_gene_pres,"./data/ESBL_plasmids/amrfinder_mobsuite_beta_lactamase_presence.RDS")
 ```
 
-# Get isolate's
+# Get isolate's plasmid clusters with BLA and ESCrE genes
 ```{r} 
 plasmid_sum_info_blactam <- mobsuite_gene_pres %>% subset(BETA_LACTAM_contig ==T)
 plasmid_sum_info_ESCrE <- mobsuite_gene_pres %>% subset(ESCrE_contig ==T)
@@ -129,11 +132,15 @@ get_mobtyper_cluster_from_amrfinder <- function (df, mobtyper)
         `colnames<-`(plasmid_cluster) %>% `rownames<-`(df$genomic_id)
 }
 
+# B-lactamase gene contig matrix
+## Implementation
 blactam_plasmid_contigs <- get_mobtyper_cluster_from_amrfinder(df,plasmid_sum_info_blactam)
-
+## Save
 saveRDS(blactam_plasmid_contigs,"./data/ESBL_plasmids/amrfinder_beta_lactam_contig_matrix.RDS")
 
+# ESCrE gene contig matrix
+## Implementation
 ESCrE_plasmid_contigs <- get_mobtyper_cluster_from_amrfinder(df,plasmid_sum_info_ESCrE)
-
+## Save
 saveRDS(ESCrE_plasmid_contigs,"./data/ESBL_plasmids/amrfinder_ESCrE_contig_matrix.RDS")
 ```
