--- a/scripts/SNP_cluster_detection/MERLIN_SNPKIT_matrices.Rmd
+++ b/scripts/SNP_cluster_detection/MERLIN_SNPKIT_matrices.Rmd
@@ -45,6 +45,7 @@ species <- table(df$Species) %>% subset(.>1) %>% names %>% str_split(" ",simplif
   paste0(genus,species)
 })  
 
+# Create distance matrices
 dist_matrix <- pbmcapply::pbmclapply(species,FUN=function(x){  
   # Load file
   if(x %in% c('cportucalensis','sliquefaciens')){
@@ -63,7 +64,7 @@ dist_matrix <- pbmcapply::pbmclapply(species,FUN=function(x){
   if(x == "ecoli"){
     dna_matrix <- dna_matrix %>% select(-'NZ_UFZF01000006.1') %>% subset(rownames(.) != 'NZ_UFZF01000006.1')
   }   
-  # Remove unnecessary
+  # Remove unnecessary files
   dna_matrix <- dna_matrix %>% subset(rownames(.) %in% df$genomic_id) %>% select(any_of(df$genomic_id))
   return(dna_matrix)
 },mc.cores=6) %>% `names<-`(species)
